# qa_guru_advanced_2

./: Dockerfile  README.md  config.py  docker-compose.yaml  env.default  pyproject.toml
.github/workflows/: release.yaml  test.yaml
app/: main.py
app/database/: users.py
app/routers/: status.py  users.py
clients/: base_session.py  status_api.py  users_api.py
tests/: conftest.py  test_api.py  test_api_methods.py  test_smoke.py
